# datasetcreator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build-push.yml
catalog/: catalog.xml  ncml-to-iso.xsl
catalog/metadata/: pycsw.cfg  pycsw.yml
dataexport/: config.py  export_types.py  main.py  runner.py  storage.py  thredds.py  utils.py
dataexport/cfarray/: attributes.py  base.py  common.py  profile.py  time_series.py  trajectory.py
dataexport/datasets/: __init__.py  base.py  maps.py  msource.py  msource_inlet.py  msource_outlet.py  sios.py  timeseries.py  trajectories.py
dataexport/datasets/timeseries/: __init__.py  msource.py  sios.py
dataexport/datasets/trajectories/: __init__.py  example.py
dataexport/odm2/: __init__.py  queries.py
dataexport/sources/: base.py
dataexport/sources/ferrybox/: extractor.py
dataexport/sources/odm2/: __init__.py  builder.py  extractor.py  queries.py
datasets/multisource/: 2022-09-14T111052Z_msource-inlet.nc
dscreator/: config.py  encoding.py  main.py  runner.py  storage.py  utils.py
dscreator/cfarray/: attributes.py  base.py  common.py  profile.py  time_series.py  trajectory.py
dscreator/datasets/: __init__.py  base.py
dscreator/datasets/timeseries/: __init__.py  glomma.py  langtjern.py  msource.py  sios.py  usage.py
dscreator/datasets/trajectories/: __init__.py  example.py  ferrybox.py
dscreator/sources/: base.py
dscreator/sources/ferrybox/: __init__.py  extractor.py  queries.py  uuid_variable_code_mapper.py
dscreator/sources/odm2/: __init__.py  extractor.py  queries.py
notebooks/: create_timeseries.ipynb  exceedence_limits.ipynb  limits.ipynb  norsoop-2017-2022.ipynb  trajectory_plot.ipynb  urchin_density.ipynb
notebooks/Norsoop-manual-qc-files/: FA2017_bad_inletT_dates.txt  FA2017_bad_ox_sat_dates.txt  FA2018_bad_inletT_dates.txt  FA2018_bad_ox_sat_dates.txt  FA2019_bad_inletT_dates.txt  FA2019_bad_ox_sat_dates.txt  FA2020_bad_inletT_dates.txt  FA2020_bad_ox_sat_dates.txt  FA2021_bad_inletT_dates.txt  FA2021_bad_ox_sat_dates.txt  FA2022_bad_inletT_dates.txt  FA2022_bad_ox_sat_dates.txt  NB2017_bad_inletT_dates.txt  NB2017_bad_oxsat_dates.txt  NB2018_bad_inletT_dates.txt  NB2018_bad_oxsat_dates.txt  NB2019_bad_inletT_dates.txt  NB2020_bad_inletT_dates.txt  NB2021_bad_inletT_dates.txt  NB2022_bad_inletT_dates.txt  TF2017_bad_inletT_dates.txt  TF2019_bad_inletT_dates.txt  TF2019_bad_oxsat_dates.txt  TF2020_bad_inletT_dates.txt  TF2022_bad_inletT_dates.txt
notebooks/catalog/datasets/fa_ferrybox_2017_2022/Color Fantasy/: FA_acdd_color fantasy.nc
scripts/: example_trajectory.py  ferrybox_example.py  fetch_metadata.py  msource_example.py  play.py  test_netcdf.py  trajectory_example.ipynb  trajectory_example.py  trajectory_plot.ipynb  trajectory_plot.py
tests/: conftest.py  docker-compose.yml  test_dataexport.py  test_encoding.py  test_extract_create.py  test_ferrybox_extractor.py  test_odm2_extractor.py  test_queries.py  test_sios.py  test_thredds.py  test_timeseries.py  test_trajectories.py  test_utils.py  tsb.sql
tests/data/: Dockerfile  README.md  odm2.sql  spectra.csv  spectra_track.csv  track.csv  tsb.sql
tests/data/nc/: fa_test_dataset.nc  msource_test_dataset.nc
threddsdata/: catalog.xml  subcatalog.xml
