[tool.poetry]
name = "dataexport"
version = "0.1.0"
description = ""
authors = ["Kim Nes Leirvik <kim.leirvik@niva.no>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.6.1"
psycopg2-binary = "^2.9.3"
typing-extensions = "^4.3.0"
xarray = "^2022.6.0"
cf-units = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^22.8.0"
ipykernel = "^6.15.2"
matplotlib = "^3.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dataexport = 'dataexport.main:app'

[tool.black]
line-length = 120
target_version = ['py38']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
