[tool.poetry]
name = "dataexport"
version = "0.1.0"
description = ""
authors = ["Kim Nes Leirvik <kim.leirvik@niva.no>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.6.1"
psycopg2-binary = "^2.9.3"
typing-extensions = "^4.3.0"
xarray = "^2022.6.0"
cf-units = "^3.1.1"
netCDF4 = "^1.6.1"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
requests = "^2.28.1"
tenacity = "^8.1.0"
google-cloud-storage = "^2.7.0"
SQLAlchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
isort = "^5.10.1"
black = "^22.8.0"
ipykernel = "^6.15.2"
matplotlib = "^3.5.3"
requests-mock = "^1.10.0"
nc-time-axis = "^1.4.1"
pytest-docker = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dataexport = 'dataexport.main:app'

[tool.black]
line-length = 120
target_version = ['py310']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files

[tool.pytest.ini_options]
markers = [
    "docker: marks tests to run with docker (deselect with '-m \"not docker\"')"
]

